--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,3 +116,39 @@ a { cursor:pointer; }
 }
 #edit.addOnly .editOnly { display:None; }
 #edit.editOnly .addOnly { display:None; }
+
+
+
+
+/*by Al Fuad*/
+td.passcell{
+    position: relative;
+}
+.emni{
+    display: block;
+    width: 37px;
+    height: 10px;
+    background: #43729c;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 9px;
+    margin: auto;
+}
+
+.pass-chck-mesg{
+    margin: 4px 0 7px;
+    width: 0;
+    height: 5px;
+    display: block;
+    border: 1px solid rgba(190, 190, 190);
+    transition: 1.1s;
+}
+
+.pass-chck-mesg.green{
+    color: green;
+}
+
+.pass-chck-mesg.red{
+    color: red;
+}
